# timr-tui

./: CHANGELOG.md  Cargo.toml  flake.nix  rust-toolchain.toml
src/: app.rs  constants.rs  events.rs
src/widgets/: local_time.rs
