[package]
name = "timr-tui"
version = "1.7.0-alpha.1"
description = "TUI to organize your time: Pomodoro, Countdown, Timer."
edition = "2024"
# Reminder: Always keep `channel` in `rust-toolchain.toml` in sync with `rust-version`.
rust-version = "1.93.0"
homepage = "https://github.com/sectore/timr-tui"
repository = "https://github.com/sectore/timr-tui"
readme = "README.md"
license = "MIT"
keywords = ["tui", "timer", "countdown", "pomodoro"]
categories = ["command-line-utilities"]
exclude = [
    ".github/*",
    "demo/*.tape",
    "result/*",
    "*.mp3",
    ".claude",
    "CLAUDE.md",
]

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
color-eyre = "0.6.5"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
directories = "6.0.0"
clap = { version = "4.5.53", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting", "local-offset", "parsing", "macros", "serde"] }
notify-rust = "4.11.7"
rodio = { version = "0.21.1", features = [
    "playback",
    "symphonia-mp3",
    "symphonia-wav",
], default-features = false, optional = true }
thiserror = { version = "2.0.17", optional = true }
tui-input = "0.15.0"


[features]
sound = ["dep:rodio", "dep:thiserror"]
