[package]
name = "timr-tui"
version = "1.8.1"
description = "TUI to organize your time: Pomodoro, Countdown, Timer, Event."
edition = "2024"
# Reminder: Always keep `channel` in `rust-toolchain.toml` in sync with `rust-version`.
rust-version = "1.95.0"
homepage = "https://github.com/sectore/timr-tui"
repository = "https://github.com/sectore/timr-tui"
readme = "README.md"
license = "MIT"
keywords = ["tui", "timer", "countdown", "pomodoro"]
categories = ["command-line-utilities"]
exclude = [
    ".github/*",
    "demo/*.tape",
    "result/*",
    "*.mp3",
    ".claude",
    "CLAUDE.md",
]

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
color-eyre = "0.6.5"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
directories = "6.0.0"
clap = { version = "4.6.0", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting", "local-offset", "parsing", "macros", "serde"] }
notify-rust = "4.12.0"
rodio = { version = "0.22.2", features = [
    "playback",
    "symphonia-mp3",
    "symphonia-wav",
], default-features = false, optional = true }
thiserror = { version = "2.0.18", optional = true }
tui-input = "0.15.0"


[features]
sound = ["dep:rodio", "dep:thiserror"]
